--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <Button
@@ -21,8 +21,7 @@
         <EditText
             android:id="@+id/serverIp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="http://***REMOVED***:9200" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
